--- a/_layouts/galerie.html
+++ b/_layouts/galerie.html
@@ -7,11 +7,20 @@ layout: default
 <div class="gallery a a-fi-right-200px a-del-500 a-dur-1500">
     <div class="gallery__scroll-container js-gallery">
 
+        <div class="gallery__tile gallery__tile--intro">
+            <h2 class="fw-900 f32 f48-sm f72-md lh-solid mb-2 mb-4-sm">
+                foto's van cursisten
+            </h2>
+            <p class="f-grey-4 f20-sm f28-md lh-title">
+                geselecteerd<br>door Ziris
+            </p>
+        </div>
+
         {% for entry in page.items %}
         <div class="gallery__tile">
             <img class="gallery__img" src="{{ entry.img }}" alt="{{ entry.author }}" />
-            <h2 class="fw-900 f18">{{ entry.author }}</h2>
-            <h3 class="f12 f-grey-4">{{ entry.course | downcase }}</h3>
+            <h3 class="fw-900 f18">{{ entry.author }}</h3>
+            <h4 class="f12 f-grey-4">{{ entry.course | downcase }}</h4>
         </div>
         {% endfor %}
 
