--- a/_sass/components.gallery.scss
+++ b/_sass/components.gallery.scss
@@ -45,6 +45,22 @@ $gallery-height: 70vh;
     }
 }
 
+.gallery__tile--intro {
+    border-right: 1px solid $brand;
+    padding-right: $gutter;
+    margin-bottom: 62px;
+    height: 54vh;
+
+    @include sm {
+        height: 70vh;
+        margin-bottom: 51px;
+    }
+
+    @include md {
+        padding-right: $triple-gutter;
+    }
+}
+
 .gallery__img {
     margin-bottom: 6px;
     max-width: none;
