add header active state on desktop

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,19 +7,31 @@
         </a>
         <nav class="header__nav">
             <a href="/galerie" aria-label="galerie">
-                <span class="header__item header__item--link hidden-xs">galerie</span>
+                <span class="header__item header__item--link hidden-xs
+                {% if page.url == '/galerie.html' %}is-active{% endif %}">
+                    galerie
+                </span>
             </a>
 
             <a href="/cursussen" aria-label="cursussen">
-                <span class="header__item button button--header">cursussen</span>
+                <span class="header__item button button--header
+                {% if page.url == '/cursussen.html' %}is-active{% endif %}">
+                    cursussen
+                </span>
             </a>
 
             <a href="/over-ziris" aria-label="over ziris">
-                <span class="header__item header__item--link hidden-xs">over ziris</span>
+                <span class="header__item header__item--link hidden-xs
+                {% if page.url == '/over-ziris.html' %}is-active{% endif %}">
+                    over ziris
+                </span>
             </a>
 
             <a href="/contact" aria-label="contact">
-                <span class="header__item header__item--link hidden-xs">contact</span>
+                <span class="header__item header__item--link hidden-xs
+                {% if page.url == '/contact.html' %}is-active{% endif %}">
+                    contact
+                </span>
             </a>
 
             <button class="header__item header__item--icon visible-xs">
