--- a/_sass/components.header.scss
+++ b/_sass/components.header.scss
@@ -79,8 +79,11 @@
         }
     }
 
-    &:hover:after {
-        opacity: 1;
+    &:hover,
+    &.is-active {
+        &:after {
+            opacity: 1;
+        }
     }
 }
 
@@ -135,7 +138,7 @@
             color: $light;
         }
 
-        @media (max-width: 359px) {    
+        @media (max-width: 359px) {
             &:hover {
                 background-color: transparent;
                 color: $brand;
@@ -181,7 +184,7 @@
             color: $brand;
         }
 
-        @media (max-width: 359px) {    
+        @media (max-width: 359px) {
             &:hover {
                 background-color: transparent;
                 color: $light;
