seperate gallery.js / add comments

--- a/_layouts/galerie.html
+++ b/_layouts/galerie.html
@@ -2,15 +2,13 @@
 layout: default
 ---
 
-<h1 class="pos-a v-hidden">{{ page.title }}</h1>
-
 <div class="gallery a a-fi-right-200px a-del-500 a-dur-1500">
     <div class="gallery__scroll-container js-gallery">
 
         <div class="gallery__tile gallery__tile--intro">
-            <h2 class="fw-900 f32 f48-sm f72-md lh-solid mb-2 mb-4-sm">
+            <h1 class="fw-900 f32 f48-sm f72-md lh-solid mb-2 mb-4-sm">
                 foto's van cursisten
-            </h2>
+            </h1>
             <p class="f-grey-4 f20-sm f28-md lh-title">
                 geselecteerd<br>door Ziris
             </p>
@@ -27,4 +25,5 @@ layout: default
     </div>
 </div>
 
-<div class="pos-a top-0px w-10 js-gallery-vertical-empty-container"></div>
+<!-- empty vertical scroll container -->
+<div class="pos-a top-0px w-10 js-gallery-container"></div>
