--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,7 @@
     <script src="/assets/js/map.js"></script>
     <script src="/assets/js/nav.js"></script>
     <script src="/assets/js/cursor.js"></script>
+    <script src="/assets/js/gallery.js"></script>
     <script>
         if (window.netlifyIdentity) {
             window.netlifyIdentity.on("init", user => {
