--- a/_sass/components.gallery.scss
+++ b/_sass/components.gallery.scss
@@ -64,7 +64,7 @@ $gallery-height: 70vh;
 .gallery__img {
     margin-bottom: 6px;
     max-width: none;
-    min-width: 2000px;
+    min-width: 100vh;
     width: auto;
     height: 54vh;
     object-fit: cover;
