add gallery end

--- a/_layouts/galerie.html
+++ b/_layouts/galerie.html
@@ -22,6 +22,12 @@ layout: default
         </div>
         {% endfor %}
 
+        <div class="gallery__tile center js-gallery-end">
+            <h2 class="fw-900 f32 f48-sm f72-md lh-solid mb-2 mb-4-sm">
+                einde
+            </h2>
+        </div>
+
     </div>
 </div>
 
