--- a/_layouts/galerie.html
+++ b/_layouts/galerie.html
@@ -5,7 +5,7 @@ layout: default
 <div class="gallery a a-fi-right-200px a-del-500 a-dur-1500">
     <div class="gallery__scroll-container js-gallery">
 
-        <div class="gallery__tile gallery__tile--intro">
+        <div class="gallery__tile gallery__tile--start">
             <h1 class="fw-900 f32 f48-sm f72-md lh-solid mb-2 mb-4-sm">
                 foto's van cursisten
             </h1>
@@ -22,7 +22,7 @@ layout: default
         </div>
         {% endfor %}
 
-        <div class="gallery__tile center js-gallery-end">
+        <div class="gallery__tile gallery__tile--finish">
             <h2 class="fw-900 f32 f48-sm f72-md lh-solid mb-2 mb-4-sm">
                 einde
             </h2>
