add title entry to gallery

--- a/_layouts/galerie.html
+++ b/_layouts/galerie.html
@@ -17,8 +17,9 @@ layout: default
         {% for entry in page.items %}
         <div class="gallery__tile">
             <img class="gallery__img" data-src="{{ entry.img }}" alt="{{ entry.author }}" />
-            <h3 class="fw-900 f18">{{ entry.author }}</h3>
-            <h4 class="f12 f-grey-4">{{ entry.course | downcase }}</h4>
+            <h3 class="gallery__author">{{ entry.author }}</h3>
+            <h4 class="gallery__title">{{ entry.title }}</h4>
+            <h5 class="gallery__course">{{ entry.course }}</h5>
         </div>
         {% endfor %}
 
