improve gallery img transition

--- a/_layouts/galerie.html
+++ b/_layouts/galerie.html
@@ -16,10 +16,18 @@ layout: default
 
         {% for entry in page.items %}
         <div class="gallery__tile js-gallery-scroll">
-            <img class="gallery__img js-tr tr-stag tr-stag--right" data-src="{{ entry.img }}" alt="{{ entry.author }}" />
-            <h3 class="gallery__author js-tr tr-stag tr-stag--right">{{ entry.author }}</h3>
-            <h4 class="gallery__title js-tr tr-stag tr-stag--right">{{ entry.title | capitalize }}</h4>
-            <h5 class="gallery__course js-tr tr-stag tr-stag--right">{{ entry.course }}</h5>
+            <figure class="gallery__img-container js-tr tr-stag tr-stag--right">
+                <img class="gallery__img" data-src="{{ entry.img }}" alt="{{ entry.author }}" />
+            </figure>
+            <h3 class="gallery__author js-tr tr-stag tr-stag--right">
+                {{ entry.author }}
+            </h3>
+            <h4 class="gallery__title js-tr tr-stag tr-stag--right">
+                {{ entry.title | capitalize }}
+            </h4>
+            <h5 class="gallery__course js-tr tr-stag tr-stag--right">
+                {{ entry.course }}
+            </h5>
         </div>
         {% endfor %}
 
