--- a/_sass/components.header.scss
+++ b/_sass/components.header.scss
@@ -213,6 +213,10 @@
 .header-mobile__item {
     display: block;
     padding: 12px 0;
-    @include font(36px, 700, $lh-copy);
+    @include font(32px, 700, $lh-copy);
     transition: initial;
+
+    @media (max-width: 359px) {
+        padding: 8px 0;
+    }
 }
