update $lg breakpoint to 1200px

--- a/_sass/components.intro.scss
+++ b/_sass/components.intro.scss
@@ -20,8 +20,12 @@
     background-color: $brand;
 
     @include lg {
-        width: 67%;
+        width: 64%;
         height: 100%;
+    }
+
+    @include xl {
+        width: 67%;
     }
 }
 
