update responsive scss

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
         </a>
         <nav class="header__nav">
             <a href="/galerie" aria-label="galerie">
-                <span class="header__item header__item--link hidden-xs
+                <span class="header__item header__item--link hidden-until@m
                 {% if page.url == '/galerie.html' %}is-active{% endif %}">
                     galerie
                 </span>
@@ -21,20 +21,20 @@
             </a>
 
             <a href="/over-ziris" aria-label="over ziris">
-                <span class="header__item header__item--link hidden-xs
+                <span class="header__item header__item--link hidden-until@m
                 {% if page.url == '/over-ziris.html' %}is-active{% endif %}">
                     over ziris
                 </span>
             </a>
 
             <a href="/contact" aria-label="contact">
-                <span class="header__item header__item--link hidden-xs
+                <span class="header__item header__item--link hidden-until@m
                 {% if page.url == '/contact.html' %}is-active{% endif %}">
                     contact
                 </span>
             </a>
 
-            <button class="header__item header__item--icon visible-xs">
+            <button class="header__item header__item--icon hidden@m">
                 <div class="hamburger js-nav-toggle">
                     <span class="hamburger__line"></span>
                     <span class="hamburger__line"></span>
