--- a/_sass/components.about.scss
+++ b/_sass/components.about.scss
@@ -17,7 +17,7 @@
 .about__content {
     margin-bottom: $gutter;
 
-    @include sm {
+    @include respond-min($m) {
         margin-bottom: 60px;
     }
 }
