--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<section class="section pb-8 pb-12-sm">
+<section class="section pb-8 pb-12@m">
     <div class="container">
         <div class="about__container">
             <header class="about__header a a-fi">
