--- a/_layouts/galerie.html
+++ b/_layouts/galerie.html
@@ -6,10 +6,10 @@ layout: default
     <div class="gallery__scroll-container js-gallery">
 
         <div class="gallery__tile gallery__tile--start">
-            <h1 class="fw-900 f32 f48-sm f72-md lh-solid mb-2 mb-4-sm">
+            <h1 class="fw-900 f32 f48@m f72@l lh-solid mb-2 mb-4@m">
                 foto's van cursisten
             </h1>
-            <p class="f-grey-4 f20-sm f28-md lh-title">
+            <p class="f-grey-4 f20@m f28@l lh-title">
                 geselecteerd<br>door Ziris
             </p>
         </div>
@@ -32,7 +32,7 @@ layout: default
         {% endfor %}
 
         <div class="gallery__tile gallery__tile--finish js-gallery-scroll">
-            <h2 class="fw-900 f32 f48-sm f72-md lh-solid mb-2 mb-4-sm js-tr tr-stag tr-stag--right">
+            <h2 class="fw-900 f32 f48@m f72@l lh-solid mb-2 mb-4@m js-tr tr-stag tr-stag--right">
                 einde
             </h2>
         </div>
