--- a/_sass/components.art.scss
+++ b/_sass/components.art.scss
@@ -2,9 +2,9 @@
 // --------------------------------------------------
 .art {
     background-color: $light;
-    padding: $double-gutter 0;
+    padding: space(8) 0;
 
-    @include md {
+    @include respond-min($l) {
         padding: 100px 0;
     }
 }
@@ -12,10 +12,10 @@
 .art__grid {
     display: grid;
     grid-column-gap: 80px;
-    grid-row-gap: $double-gutter;
+    grid-row-gap: space(8);
     align-items: center;
 
-    @include md {
+    @include respond-min($l) {
         grid-template-columns: 3fr 4fr;
     }
 }
@@ -25,7 +25,7 @@
     width: 100%;
     height: 64vw;
 
-    @include md {
+    @include respond-min($l) {
         object-fit: contain;
         width: 100%;
         height: auto;
