--- a/_sass/components.cta.scss
+++ b/_sass/components.cta.scss
@@ -1,9 +1,9 @@
 .cta {
-    padding: $double-gutter 0;
+    padding: space(8) 0;
     color: $light;
     background-color: $brand;
 
-    @include md {
+    @include respond-min($l) {
         padding: 128px 0;
     }
 }
@@ -11,7 +11,7 @@
 .cta__label {
     @include font(20px, 500, $lh-title);
 
-    @include md {
+    @include respond-min($l) {
         font-size: toRem(28px);
     }
 }
@@ -20,11 +20,11 @@
     @include font(36px, 900, $lh-title);
     margin-bottom: 4px;
 
-    @include sm {
+    @include respond-min($m) {
         font-size: toRem(48px);
     }
 
-    @include md {
+    @include respond-min($l) {
         font-size: toRem(60px);
     }
 }
@@ -33,7 +33,7 @@
     font-family: $serif;
     @include font(20px, 500, $lh-copy);
 
-    @include md {
+    @include respond-min($l) {
         font-size: toRem(24px);
     }
 }
