--- a/_sass/components.intro.scss
+++ b/_sass/components.intro.scss
@@ -5,7 +5,7 @@
     color: $light;
     background-color: $brand;
 
-    @include lg {
+    @include respond-min($xxl) {
         display: flex;
         position: relative;
         justify-content: space-between;
@@ -19,12 +19,12 @@
     width: 100%;
     background-color: $brand;
 
-    @include lg {
+    @include respond-min($xxl) {
         width: 64%;
         height: 100%;
     }
 
-    @include xl {
+    @include respond-min($xxxl) {
         width: 67%;
     }
 }
@@ -33,20 +33,20 @@
     position: relative;
     z-index: 1;
     padding-top: $section-padding-s;
-    margin-bottom: $double-gutter;
+    margin-bottom: space(8);
 
-    @include lg {
+    @include respond-min($xxl) {
         display: flex;
         align-items: center;
         margin-bottom: 0;
-        padding: 0 $triple-gutter;
+        padding: 0 space(12);
     }
 }
 
 .intro__header {
     max-width: 700px;
 
-    @include lg {
+    @include respond-min($xxl) {
         text-align: right;
     }
 }
@@ -54,13 +54,13 @@
 .intro__img-container {
     position: relative;
     @extend .container;
-    padding-bottom: $double-gutter;
+    padding-bottom: space(8);
 
-    @include md {
+    @include respond-min($l) {
         padding-bottom: 100px;
     }
 
-    @include lg {
+    @include respond-min($xxl) {
         display: flex;
         align-items: center;
         width: 50%;
@@ -73,12 +73,12 @@
     width: 100%;
     height: 75vw;
 
-    @include sm {
+    @include respond-min($m) {
         width: auto;
         height: auto;
     }
 
-    @include lg {
+    @include respond-min($xxl) {
         width: 100%;
         height: calc(50vh + 10vw);
     }
@@ -87,7 +87,7 @@
 .intro__figcaption {
     color: $light;
 
-    @include lg {
+    @include respond-min($xxl) {
         margin-right: $gutter;
         padding: 0 4px 0;
         color: $brand;
