--- a/_sass/components.map.scss
+++ b/_sass/components.map.scss
@@ -16,13 +16,13 @@
     right: $gutter;
     box-shadow: $box-shadow-medium;
 
-    @include sm {
+    @include respond-min($m) {
         display: block;
     }
 
-    @include md {
-        bottom: $double-gutter;
-        right: $double-gutter;
+    @include respond-min($l) {
+        bottom: space(8);
+        right: space(8);
     }
 }
 
@@ -31,8 +31,8 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    width: $double-gutter;
-    height: $double-gutter;
+    width: space(8);
+    height: space(8);
     background-color: $light;
     cursor: pointer;
     border-bottom: 1px solid $grey-8;
@@ -60,15 +60,15 @@
     left: $gutter;
     right: $gutter;
 
-    @include sm {
+    @include respond-min($m) {
         bottom: $gutter;
         left: $gutter;
         right: initial;
     }
 
-    @include md {
-        bottom: $double-gutter;
-        left: $double-gutter;
+    @include respond-min($l) {
+        bottom: space(8);
+        left: space(8);
     }
 }
 
@@ -78,7 +78,7 @@
     box-shadow: $box-shadow-medium;
     border-radius: 2px;
 
-    @include sm {
+    @include respond-min($m) {
         max-width: 400px;
     }
 }
@@ -87,7 +87,7 @@
     margin-bottom: 10px;
     @include font(22px, 900, $lh-title);
 
-    @include sm {
+    @include respond-min($m) {
         font-size: toRem(28px);
     }
 }
