--- a/_sass/components.thanks.scss
+++ b/_sass/components.thanks.scss
@@ -18,7 +18,7 @@
 .thanks__course-title {
     @include font(28px, 500, $lh-title);
 
-    @include sm {
+    @include respond-min($m) {
         font-size: toRem(40px);
     }
 }
