add twitter card

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,11 @@
     <meta property="og:image" content="https://ziris.nl{{ page.img }}" />
     <meta property="og:description" content="{{ page.description }}" />
 
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="{{ page.title }}">
+    <meta name="twitter:description" content="{{ page.description }}">
+    <meta name="twitter:image" content="https://ziris.nl{{ page.img }}">
+
     <!-- FAVICON -->
     <link rel="icon" type="image/png" href="/favicon.ico" />
 
