--- a/_sass/settings.fonts.scss
+++ b/_sass/settings.fonts.scss
@@ -13,7 +13,8 @@
 	src: url('/assets/fonts/500.woff2') format('woff2'),
          url('/assets/fonts/500.woff') format('woff');
 	font-weight: 500;
-	font-style: normal;
+    font-style: normal;
+    font-display: swap;    
 }
 
 @font-face {
@@ -21,7 +22,8 @@
 	src: url('/assets/fonts/500i.woff2') format('woff2'),
          url('/assets/fonts/500i.woff') format('woff');
 	font-weight: 500;
-	font-style: italic;
+    font-style: italic;
+    font-display: swap;    
 }
 
 @font-face {
@@ -29,7 +31,8 @@
 	src: url('/assets/fonts/600.woff2') format('woff2'),
          url('/assets/fonts/600.woff') format('woff');
 	font-weight: 600;
-	font-style: normal;
+    font-style: normal;
+    font-display: swap;    
 }
 
 @font-face {
@@ -37,7 +40,8 @@
 	src: url('/assets/fonts/700.woff2') format('woff2'),
          url('/assets/fonts/700.woff') format('woff');
 	font-weight: 700;
-	font-style: normal;
+    font-style: normal;
+    font-display: swap;    
 }
 
 @font-face {
@@ -45,7 +49,8 @@
 	src: url('/assets/fonts/900.woff2') format('woff2'),
          url('/assets/fonts/900.woff') format('woff');
 	font-weight: 900;
-	font-style: normal;
+    font-style: normal;
+    font-display: swap;    
 }
 
 @font-face {
@@ -53,5 +58,6 @@
 	src: url('/assets/fonts/900i.woff2') format('woff2'),
          url('/assets/fonts/900i.woff') format('woff');
 	font-weight: 900;
-	font-style: italic;
+    font-style: italic;
+    font-display: swap;    
 }
