fix header bg bug and hamburger div in button

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,11 +35,11 @@
             </a>
 
             <button class="header__item header__item--icon hidden@m">
-                <div class="hamburger js-nav-toggle">
+                <span class="hamburger js-nav-toggle">
                     <span class="hamburger__line"></span>
                     <span class="hamburger__line"></span>
                     <span class="hamburger__line"></span>
-                </div>
+                </span>
             </button>
         </nav>
     </div>
