add src to galary img

--- a/_layouts/galerie.html
+++ b/_layouts/galerie.html
@@ -17,7 +17,7 @@ layout: default
         {% for entry in page.items %}
         <div class="gallery__tile js-gallery-scroll" id="js-gallery-scroll-{{ forloop.index }}">
             <figure class="gallery__img-container js-tr tr-stag tr-stag--right">
-                <img class="gallery__img" data-src="{{ entry.img }}" alt="{{ entry.author }}" />
+                <img class="gallery__img" src="" data-src="{{ entry.img }}" alt="{{ entry.author }}" />
             </figure>
             <h3 class="gallery__author js-tr tr-stag tr-stag--right">
                 {{ entry.author }}
